--- a/.github/workflows/create-room-mailboxes.yml
+++ b/.github/workflows/create-room-mailboxes.yml
@@ -1,3 +1,13 @@
+name: Create Room Mailboxes
+
+on:
+  workflow_dispatch:
+    inputs:
+      csv_file:
+        description: 'CSV file path'
+        required: true
+        default: 'UsersToMigrate.csv'
+
 jobs:
   create-mailboxes:
     runs-on: windows-latest
@@ -9,26 +19,29 @@ jobs:
     - name: Install ExchangeOnlineManagement
       run: Install-Module -Name ExchangeOnlineManagement -Force -AllowClobber -Scope CurrentUser
 
+    - name: Import Certificate
     - name: Run mailbox creation script
       shell: pwsh
-      env:
-        EXO_PFX_B64: ${{ secrets.EXO_PFX_B64 }}
-        EXO_PFX_PASSWORD: ${{ secrets.EXO_PFX_PASSWORD }}
-        EXO_APP_ID: ${{ secrets.EXO_APP_ID }}
-        EXO_TENANT_ID: ${{ secrets.EXO_TENANT_ID }}
       run: |
+        # Import ExchangeOnlineManagement
         Import-Module ExchangeOnlineManagement
 
         # Decode and import PFX certificate
-        $pfxBytes = [Convert]::FromBase64String($env:EXO_PFX_B64)
+        $pfxBytes = [Convert]::FromBase64String("${{ secrets.EXO_PFX_B64 }}")
         $pfxPath = "$env:TEMP\EXOCert.pfx"
         [IO.File]::WriteAllBytes($pfxPath, $pfxBytes)
-        $pwd = ConvertTo-SecureString -String $env:EXO_PFX_PASSWORD -AsPlainText -Force
+        $pwd = ConvertTo-SecureString -String "${{ secrets.EXO_PFX_PASSWORD }}" -AsPlainText -Force
         $cert = Import-PfxCertificate -FilePath $pfxPath -CertStoreLocation Cert:\CurrentUser\My -Password $pwd
         Write-Output "Certificate imported: $($cert.Thumbprint)"
 
-        # Connect to Exchange Online using app-based authentication
+    - name: Run mailbox creation script
+      shell: pwsh
+      run: |
+        Import-Module ExchangeOnlineManagement
         Connect-ExchangeOnline -AppId $env:EXO_APP_ID -CertificateThumbprint $cert.Thumbprint -Organization $env:EXO_TENANT_ID
+        # Connect to Exchange Online using app-based authentication
+        Connect-ExchangeOnline -AppId "${{ secrets.EXO_APP_ID }}" -CertificateThumbprint $cert.Thumbprint -Organization "${{ secrets.EXO_TENANT_ID }}"
 
+        ./CreateRoomMailbox.ps1
         # Run mailbox creation script
         ./CreateRoomMailbox.ps1 "${{ github.event.inputs.csv_file }}"
