--- a/.github/workflows/create-room-mailboxes.yml
+++ b/.github/workflows/create-room-mailboxes.yml
@@ -12,36 +12,35 @@ jobs:
   create-mailboxes:
     runs-on: windows-latest
 
+    env:
+      EXO_APP_ID: ${{ secrets.EXO_APP_ID }}
+      EXO_TENANT_ID: ${{ secrets.EXO_TENANT_ID }}
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
     - name: Install ExchangeOnlineManagement
-      run: Install-Module -Name ExchangeOnlineManagement -Force -AllowClobber -Scope CurrentUser
-
-    - name: Import Certificate
-    - name: Run mailbox creation script
       shell: pwsh
       run: |
-        # Import ExchangeOnlineManagement
-        Import-Module ExchangeOnlineManagement
+        Install-Module -Name ExchangeOnlineManagement -Force -AllowClobber -Scope CurrentUser
 
-        # Decode and import PFX certificate
+    - name: Import Certificate
+      shell: pwsh
+      run: |
         $pfxBytes = [Convert]::FromBase64String("${{ secrets.EXO_PFX_B64 }}")
         $pfxPath = "$env:TEMP\EXOCert.pfx"
         [IO.File]::WriteAllBytes($pfxPath, $pfxBytes)
         $pwd = ConvertTo-SecureString -String "${{ secrets.EXO_PFX_PASSWORD }}" -AsPlainText -Force
         $cert = Import-PfxCertificate -FilePath $pfxPath -CertStoreLocation Cert:\CurrentUser\My -Password $pwd
         Write-Output "Certificate imported: $($cert.Thumbprint)"
+        echo "CERT_THUMBPRINT=$($cert.Thumbprint)" >> $env:GITHUB_ENV
 
     - name: Run mailbox creation script
       shell: pwsh
       run: |
         Import-Module ExchangeOnlineManagement
-        Connect-ExchangeOnline -AppId $env:EXO_APP_ID -CertificateThumbprint $cert.Thumbprint -Organization $env:EXO_TENANT_ID
-        # Connect to Exchange Online using app-based authentication
-        Connect-ExchangeOnline -AppId "${{ secrets.EXO_APP_ID }}" -CertificateThumbprint $cert.Thumbprint -Organization "${{ secrets.EXO_TENANT_ID }}"
+        Connect-ExchangeOnline -AppId "$env:EXO_APP_ID" -CertificateThumbprint "$env:CERT_THUMBPRINT" -Organization "$env:EXO_TENANT_ID"
 
-        ./CreateRoomMailbox.ps1
-        # Run mailbox creation script
+        # Run your script with input
         ./CreateRoomMailbox.ps1 "${{ github.event.inputs.csv_file }}"
